# clicker-python-bot

./: .env.example  README.md  pyproject.toml
backend/v1/: client.py  config.py  database.py
client/: config.py  main.py
client/handlers/: __init__.py  callback_handlers.py  client_handlers.py
client/keyboards/: __init__.py  client_inline_keyboards.py
client/lexicons/: lexicon_ru.py
