[tool.poetry]
name = "clicker-python-bot"
version = "0.1.0"
description = ""
authors = ["fokze-13 <108113475+fokze-13@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
aiogram = "^3.15.0"
SQLAlchemy = "^2.0.36"
environs = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
